create user and post models, start implementation of psql db

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=todoapp;Username=postgres;Password=pass123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
